<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="false"
        android:background="@drawable/image"
        android:contentDescription="@string/logo_svp"
        app:layout_constraintEnd_toStartOf="@+id/scrollView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="851dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/arrivage"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#0000e6"
                    android:text="@string/arrivage"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/contenantcontenu"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#0000e6"
                    android:text="@string/contenant_contenu"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/tri"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#0000e6"
                    android:text="@string/tri"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/recup_tou"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#0000e6"
                    android:text="@string/r_cup_ration_tourn_e"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/chargement"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#0000e6"
                    android:text="@string/chargement_quai"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/livraison_ramasse"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#0000e6"
                    android:text="@string/livraison_ramasse"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/line4"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/message"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#0000e6"
                    android:text="@string/message"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/dechargement"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#0000e6"
                    android:text="@string/d_chargement"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/line5"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/extraction"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#0000e6"
                    android:text="@string/extraction_d_objets"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/transmissions"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#0000e6"
                    android:text="@string/etat_transmissions"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/line6"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/fin_de_jourmee"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#0000e6"
                    android:text="@string/fin_de_journ_e"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/admin"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#0000e6"
                    android:text="@string/administration"
                    android:textSize="12sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>